--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-1": "^6.24.1",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2",
-    "semantic-ui-css": "^2.2.11"
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "semantic-ui-css": "^2.4.1"
   },
   "devDependencies": {
     "autoprefixer": "7.1.0",
@@ -16,7 +16,7 @@
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
     "babel-preset-env": "^1.6.0",
-    "babel-preset-react-app": "^3.0.0",
+    "babel-preset-react-app": "^3.1.2",
     "babel-preset-stage-1": "^6.24.1",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
@@ -39,12 +39,12 @@
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.5",
     "promise": "7.1.1",
-    "react-dev-utils": "^3.0.0",
+    "react-dev-utils": "^3.1.3",
     "react-error-overlay": "^1.0.7",
     "style-loader": "0.17.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.8",
-    "webpack": "^3.5.3",
+    "webpack": "^3.12.0",
     "webpack-dev-server": "2.9.1",
     "webpack-manifest-plugin": "1.1.0",
     "whatwg-fetch": "2.0.3"
@@ -55,8 +55,12 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "jest": {
-    "collectCoverageFrom": ["src/**/*.{js,jsx}"],
-    "setupFiles": ["<rootDir>/config/polyfills.js"],
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}"
+    ],
+    "setupFiles": [
+      "<rootDir>/config/polyfills.js"
+    ],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.js?(x)",
       "<rootDir>/src/**/?(*.)(spec|test).js?(x)"
@@ -68,13 +72,17 @@
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
       "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
-    "transformIgnorePatterns": ["[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"],
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
+    ],
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
     }
   },
   "babel": {
-    "presets": ["react-app"]
+    "presets": [
+      "react-app"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
